include/config-win.h
@@ -151,6 +151,10 @@ typedef uint rf_SetTimer;
 #define USE_MB_IDENT 1
 #define USE_STRCOLL 1
 
+/* All windows servers should support .sym files */
+#undef USE_SYMDIR
+#define USE_SYMDIR
+
 /* If LOAD DATA LOCAL INFILE should be enabled by default */
 #define ENABLED_LOCAL_INFILE 1
 
