sql/sql_base.cc
@@ -1868,8 +1868,13 @@ int setup_fields(THD *thd, TABLE_LIST *tables, List<Item> &fields,
 
   while ((item=it++))
   {
+    /*
+      Expand * to all fields if this is not the temporary table for an
+      a UNION result
+    */
     if (item->type() == Item::FIELD_ITEM &&
-	((Item_field*) item)->field_name[0] == '*')
+	((Item_field*) item)->field_name[0] == '*' &&
+	!((Item_field*) item)->field)
     {
       uint elem=fields.elements;
       if (insert_fields(thd,tables,((Item_field*) item)->db_name,
